WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
169463
[Win] Scrollbars buttons have incorrect size in HiDPI.
https://bugs.webkit.org/show_bug.cgi?id=169463
Summary
[Win] Scrollbars buttons have incorrect size in HiDPI.
Per Arne Vollan
Reported
2017-03-10 03:16:41 PST
They are really small in HiDPI mode.
Attachments
Patch
(2.63 KB, patch)
2017-03-10 03:20 PST
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2017-03-10 03:20:43 PST
Created
attachment 304037
[details]
Patch
Per Arne Vollan
Comment 2
2017-03-10 05:08:00 PST
rdar://problem/30885071
Alex Christensen
Comment 3
2017-03-10 11:00:34 PST
Comment on
attachment 304037
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=304037&action=review
I noticed this a while ago but didn't fix it yet. Thanks for tracking this down.
> Source/WebCore/ChangeLog:9 > + There seems to be a bug in DrawThemeBackground when the device context is scaled. > + We can work around this by scaling the drawing rectangle instead.
I'm not sure this is a bug in DrawThemeBackground. I think we just need to scale the drawing rectangle or use something like
https://msdn.microsoft.com/en-us/library/windows/desktop/dn384112.aspx
in order to get correct behavior.
Per Arne Vollan
Comment 4
2017-03-10 11:56:11 PST
Comment on
attachment 304037
[details]
Patch Thanks for reviewing :)
WebKit Commit Bot
Comment 5
2017-03-10 12:25:44 PST
Comment on
attachment 304037
[details]
Patch Clearing flags on attachment: 304037 Committed
r213727
: <
http://trac.webkit.org/changeset/213727
>
WebKit Commit Bot
Comment 6
2017-03-10 12:25:47 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug