[Win] Scrollbars buttons have incorrect size in HiDPI. https://bugs.webkit.org/show_bug.cgi?id=169463

Reviewed by Alex Christensen.

There seems to be a bug in DrawThemeBackground when the device context is scaled.
We can work around this by scaling the drawing rectangle instead.

* platform/win/ScrollbarThemeWin.cpp:
(WebCore::ScrollbarThemeWin::paintButton):


Canonical link: https://commits.webkit.org/186479@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213727 268f45cc-cd09-0410-ab3c-d52691b4dbfc