Source/WebCore/platform/win/ScrollbarThemeWin.cpp
@@ -331,15 +331,26 @@ void ScrollbarThemeWin::paintButton(GraphicsContext& context, Scrollbar& scrollb
     if (scrollbarTheme)
         alphaBlend = IsThemeBackgroundPartiallyTransparent(scrollbarTheme, SP_BUTTON, xpState);
 
-    LocalWindowsContext windowsContext(context, rect, alphaBlend);
-    RECT themeRect(rect);
-    if (scrollbarTheme)
-        DrawThemeBackground(scrollbarTheme, windowsContext.hdc(), SP_BUTTON, xpState, &themeRect, 0);
-    else
-        ::DrawFrameControl(windowsContext.hdc(), &themeRect, DFC_SCROLL, classicState);
+    // There seems to be a bug in DrawThemeBackground when the device context is scaled.
+    // We can work around this by scaling the drawing rectangle instead.
+    auto scaleFactor = context.scaleFactor().width();
+    auto scaledRect = rect;
+    scaledRect.scale(scaleFactor);
+    context.save();
+    context.scale(FloatSize(1.0f / scaleFactor, 1.0f / scaleFactor));
 
-    if (!alphaBlend && !context.isInTransparencyLayer())
-        DIBPixelData::setRGBABitmapAlpha(windowsContext.hdc(), rect, 255);
+    {
+        LocalWindowsContext windowsContext(context, scaledRect, alphaBlend);
+        RECT themeRect(scaledRect);
+        if (scrollbarTheme)
+            DrawThemeBackground(scrollbarTheme, windowsContext.hdc(), SP_BUTTON, xpState, &themeRect, 0);
+        else
+            ::DrawFrameControl(windowsContext.hdc(), &themeRect, DFC_SCROLL, classicState);
+
+        if (!alphaBlend && !context.isInTransparencyLayer())
+            DIBPixelData::setRGBABitmapAlpha(windowsContext.hdc(), scaledRect, 255);
+    }
+    context.restore();
 }
 
 static IntRect gripperRect(int thickness, const IntRect& thumbRect)
